--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -260,12 +260,12 @@ max_frequency = "5s"
 
 # This hook runs before a new user is created and allows developers to reject the request based on the incoming user object.
 [auth.hook.before_user_created]
-enabled = true
+enabled = false
 uri = "pg-functions://postgres/public/validate_email_domain"
 
 # This hook runs before a token is issued and allows you to add additional claims based on the authentication method used.
 [auth.hook.custom_access_token]
-enabled = true
+enabled = false
 uri = "pg-functions://postgres/public/custom_access_token_hook"
 
 # Configure one of the supported SMS providers: `twilio`, `twilio_verify`, `messagebird`, `textlocal`, `vonage`.
